# codewhale-desktop

./: .gitignore  BUILD.md  README.md  build-macos.sh  package.json
.github/workflows/: build-macos.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: core.test.ts
frontend/src/api/: index.ts
frontend/src/components/: ErrorBoundary.tsx  Skeleton.tsx
frontend/src/pages/: AutomationsPage.tsx  ChatPage.tsx  FleetPage.tsx  SessionsPage.tsx  SettingsPage.tsx  SnapshotsPage.tsx  TasksPage.tsx  ToolsPage.tsx  WorkspacePage.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: engine.rs  main.rs
